TEST_PROGRAMS/INVALID/jacob_errington/invalid-type.min
var x : hello ;
# uses an unknown type

